# muso

./: .gitmodules  Cargo.toml  README.md  TODO.md
.github/workflows/: publishing.yml
cli/: cli.rs  error.rs  logger.rs  main.rs
lib/: config.rs  format.rs  metadata.rs  utils.rs  watcher.rs
share/: config.toml  musso.service
tests/: format_string.rs
