[package]
authors = ["Kevin <quebin31@gmail.com>"]
edition = "2021"
name = "muso"
version = "2.0.0"

[[bin]]
name = "muso"
path = "cli/main.rs"

[lib]
name = "muso"
path = "lib/lib.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.80"
cfg-if = "1.0.0"
clap = { version = "4.5.2", features = ["derive"] }
dirs = "5.0.1"
human-panic = "1.2.3"
id3 = "1.13.1"
infer = "0.15.0"
lewton = "0.10.2"
log = "0.4.21"
metaflac = "0.2.5"
mp4ameta = "0.11.0"
nom = "7.1.3"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
ogg = "=0.8.0"
shellexpand = "3.1.0"
thiserror = "1.0.57"
toml = "0.8.10"
try-block = "0.1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.117"

[dependencies.chrono]
features = ["serde"]
version = "0.4.35"

[dev-dependencies]
anyhow = "1.0.80"
text_io = "0.1.12"

[features]
default = []
standalone = []
